# 9pserver

./: .gitignore  9pserver.cabal  NinePServer.cabal  README.md  Test.hs  message-format-notes.txt
Network/: NineP.hs
Network/NineP/: Context.hs  Directory.hs  Error.hs  File.hs  Functions.hs  ReadOnlyFile.hs  ReadOnlyPipe.hs  Response.hs  Server.hs  WriteOnlyFile.hs  WriteOnlyPipe.hs
Network/NineP/File/: Server.hs
Network/NineP/Internal/: Context.hs  File.hs  Msg.hs  Response.hs  Types.hs
kernel-9p-patches/: 9p-make-read-or-write-break-on-partial-completion.patch  9p-set-truncate-flag-properly.patch
test/: Spec.hs
test/Response/: :  Tests.hs
test/Server/: Tests.hs
