Name:                NinePServer
Version:             0.4.1
Description:         A library providing one with a somewhat higher level interface to 9P2000 protocol than existing implementations. Designed to facilitate rapid development of synthetic filesystems.
Synopsis:            High-level abstraction over 9P protocol
Maintainer:          Sergey Alirzaev <zl29ah@gmail.com>
License:             OtherLicense
Category:            Network
License-file:        LICENSE
Build-Type:          Simple
Cabal-Version:       >= 1.10
Stability:           Experimental
Tested-With:         GHC == 8.0.1

Source-repository head
  type:              git
  location:          https://github.com/l29ah/Network-NineP.git

Source-repository this
  type:              git
  location:          https://github.com/l29ah/Network-NineP.git
  tag:               0.4.1

Library
  other-extensions: NoImplicitPrelude, OverloadedStrings
  Build-Depends:
                base
              , bitmask
              , bytestring
              , containers
              , unordered-containers
              , network
              , vector
              , text
              , text-show
              , protolude
              , string-conversions
              , cereal
              , safe-exceptions
              , network-simple
              , NineP
              , stm
              , GenericPretty
              , posix-paths
              , unix
              , containers
              , ixset-typed
              , wl-pprint-text
              , groom
  Exposed-modules:
                  Network.NineP
                  Network.NineP.Error
                  Network.NineP.Server
                  Network.NineP.Context
                  Network.NineP.Functions
                  Network.NineP.ReadOnlyFile
                  Network.NineP.ReadOnlyPipe
                  Network.NineP.WriteOnlyFile
                  Network.NineP.WriteOnlyPipe
                  Network.NineP.Directory
                  Network.NineP.Response
  default-language:     Haskell2010

-- Executable test
--   Main-is: Test.hs
--   ghc-options: -fno-warn-tabs

test-suite NinePServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Response.Tests
                       Server.Tests
  build-tools:       hsc2hs
  build-depends:       base
                     , bitmask
                     , bytestring
                     , containers
                     , unordered-containers
                     , network
                     , vector
                     , text
                     , text-show
                     , protolude
                     , string-conversions
                     , cereal
                     , safe-exceptions
                     , network-simple
                     , stm
                     , GenericPretty
                     , posix-paths
                     , unix
                     , NinePServer
                     , NineP
                     , tasty
                     , tasty-hunit
                     , async
                     , ixset-typed
  other-extensions: NoImplicitPrelude, OverloadedStrings
  default-language:    Haskell2010
